[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "modal>=0.66.0",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "tiktoken>=0.12.0",
    "tinygrad>=0.12.0",
    "torch>=2.11.0",
]
